@@ -62,6 +62,7 @@ app.perm.weblogsPing    = deny
 app.perm.externalImages = deny
 app.perm.register       = allow
 app.perm.createSnip     = deny
+app.perm.multiplePosts  = allow
 #
 # - Mail
 app.mail.host           = mailhost
