@@ -1,6 +1,11 @@
 0.5
 
-- Added Feature: made snip names slash '/' insensitive
+- Added feature: parameter for Mail-To-Blog POP3 polling (app.mail.pop3.interval in minutes)
+- Added feature: instead of snip-notfound SnipSnap can now display a create page (see app.perm.createSnips)
+- Added feature: some basic labels
+- Added feature: path is show for snips with namespaces, e.g. SnipSnap > developer > stephan
+- Added feature: blog posts are now namespaces e.g. start/2003-06-02
+- Added feature: made snip names slash '/' insensitive
 - Fixed bug: links and images no longer contain complete URLs
 - Fixed bug: Reworked URL detection
 - Developer: completely reorganized Configuration (macros need recompile!)
